tests/e2e/mutation_whitespace.error
Error: syntax error in story at line 2, column 5

2|    a = b increment
          ^

E0148: Service name expected but existing variable `b` found.
