tests/e2e/mutation_whitespace.story
b = 1
a = b increment
